--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h4> Password length: </h4>
         <button id="btn-generate" onclick="passwordGens()"> <img id="icon1" src="Icon.png"> Generate passwords</button>
 
-        <input id="inputfield" value=12 type="number">
+        <input id="inputfield" onclick="passwordGens()" value=12 type="number">
         <div id="pass-container"> 
            <div>
             <button class="btn" id="btn1"><img class="dotIcon" src="Icon1.png"></button>
